# blended-04-05

./: README.md  client.py  docker-compose.yaml  main.py  message_consumer.py  pyproject.toml  scrappy_main.py
bookscrapper/bookscrapper/spiders/: categorycrapper.py
db/: models.py  store_in_db.py
