[tool.poetry]
name = "blended-04-05"
version = "0.1.0"
description = "Book scraper based on python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
requests = "^2.31.0"
pika = "^1.3.2"
mongoengine = "^0.28.2"
redis = "^5.0.4"
redis-lru = "^0.1.2"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
